Atualizacao na configuracao do PuppetServer e Hiera